default/objects/Opportunity/fields/Buffer_2__c.field-meta.xml
<CustomField>
    <fullName>Buffer_2__c</fullName>
    <formula>CASE(Risk_Category__c,
'Low', 0.3,
'Medium', 0.2,
'High', 0.1,
'Very', 0,
null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Buffer_2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>