default/objects/Opportunity/fields/Buffer_Formula__c.field-meta.xml
<CustomField>
    <fullName>Buffer_Formula__c</fullName>
    <formula>VALUE(TEXT( Buffer_2__c ))</formula>
    <label>Buffer</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>