default/objects/Opportunity/fields/Business_process__c.field-meta.xml
<CustomField>
    <fullName>Business_process__c</fullName>
    <description>The field for business process type</description>
    <inlineHelpText>The field for business process type</inlineHelpText>
    <label>Business process</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standard</fullName>
                <default>true</default>
                <label>Standard</label>
            </value>
            <value>
                <fullName>E2EClassic</fullName>
            </value>
            <value>
                <fullName>E2EBusiness</fullName>
            </value>
            <value>
                <fullName>E2ELink</fullName>
            </value>
            <value>
                <fullName>PPR_API</fullName>
                <label>PPR API</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>