default/objects/Opportunity/fields/Calc_Transf_Date__c.field-meta.xml
<CustomField>
    <fullName>Calc_Transf_Date__c</fullName>
    <formula>OwnerId</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner Name Calc Transf Date</label>
    <type>Text</type>
</CustomField>