default/objects/Opportunity/fields/Car_wash__c.field-meta.xml
<CustomField>
    <fullName>Car_wash__c</fullName>
    <defaultValue>false</defaultValue>
    <description>additional conditions to the contract for Car wash</description>
    <label>Car wash</label>
    <type>Checkbox</type>
</CustomField>