default/objects/Opportunity/fields/Carnet_Approval_Process__c.field-meta.xml
<CustomField>
    <fullName>Carnet_Approval_Process__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Carnet Approval Process</label>
    <type>Checkbox</type>
</CustomField>