default/objects/Opportunity/fields/Carnet_Unit_Custom_Standard_Price__c.field-meta.xml
<CustomField>
    <fullName>Carnet_Unit_Custom_Standard_Price__c</fullName>
    <label>Carnet Unit Custom Standard Price</label>
    <summaryFilterItems>
        <field>Carnet_Unit__c.Standard_Unit_Package2__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryForeignKey>Carnet_Unit__c.Opportunity__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>