default/objects/Opportunity/fields/Carnet_Unit_Price_Modified__c.field-meta.xml
<CustomField>
    <fullName>Carnet_Unit_Price_Modified__c</fullName>
    <description>Price Modified for Carnet Unit.</description>
    <label>Carnet Unit Price Modified</label>
    <summaryFilterItems>
        <field>Carnet_Unit__c.Pricing_Approval_Status__c</field>
        <operation>equals</operation>
        <value>Approval Required</value>
    </summaryFilterItems>
    <summaryForeignKey>Carnet_Unit__c.Opportunity__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>