default/objects/Opportunity/fields/CategoryContract__c.field-meta.xml
<CustomField>
    <fullName>CategoryContract__c</fullName>
    <label>Category of Contract</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>О</fullName>
            </value>
            <value>
                <fullName>У</fullName>
            </value>
            <value>
                <fullName>МО</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>