default/objects/Opportunity/fields/CCP__c.field-meta.xml
<CustomField>
    <fullName>CCP__c</fullName>
    <formula>IF(OR(CONTAINS( Source_if_self_sourced_c__c , "ЦПП"),CONTAINS(   TEXT(Promo_Code1__c ) , "ЦПП")), "ДА", "НЕТ")</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CCP</label>
    <type>Text</type>
</CustomField>