default/objects/Opportunity/fields/CCS_Accident_Insurance__c.field-meta.xml
<CustomField>
    <fullName>CCS_Accident_Insurance__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox to indicate whether the customer opted for accident insurance or not.</description>
    <label>CCS Accident Insurance</label>
    <type>Checkbox</type>
</CustomField>