default/objects/Opportunity/fields/ccs_account_merge_gfn__c.field-meta.xml
<CustomField>
    <fullName>ccs_account_merge_gfn__c</fullName>
    <formula>IF( CCS_GFN_number__c &lt;&gt; '', 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ccs_account_merge_gfn</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>