default/objects/Opportunity/fields/CCS_account_merge_ID__c.field-meta.xml
<CustomField>
    <fullName>CCS_account_merge_ID__c</fullName>
    <label>CCS_account_merge_ID</label>
    <length>25</length>
    <type>Text</type>
</CustomField>