default/objects/Opportunity/fields/CCS_celkem_financni_naboj_Bonus__c.field-meta.xml
<CustomField>
    <fullName>CCS_celkem_financni_naboj_Bonus__c</fullName>
    <description>Celkem_financni_naboj__c from CCS Bonus object.</description>
    <label>CCS_financial_deposit_Bonus</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>