default/objects/Opportunity/fields/CCS_Close_Date__c.field-meta.xml
<CustomField>
    <fullName>CCS_Close_Date__c</fullName>
    <description>Close Date field from Lead. Only for CCS.</description>
    <label>CCS Close Date</label>
    <type>Date</type>
</CustomField>