default/objects/Opportunity/fields/CCS_Company_ID__c.field-meta.xml
<CustomField>
    <fullName>CCS_Company_ID__c</fullName>
    <description>CCS Company ID (IČ) mirrored from Account.</description>
    <formula>Account.CCS_Company_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>CCS Company ID from Account.</inlineHelpText>
    <label>CCS Company ID</label>
    <type>Text</type>
</CustomField>