default/objects/Opportunity/fields/CCS_Competition_Other__c.field-meta.xml
<CustomField>
    <fullName>CCS_Competition_Other__c</fullName>
    <label>Competition Other</label>
    <type>TextArea</type>
</CustomField>