default/objects/Opportunity/fields/CCS_Cooperation__c.field-meta.xml
<CustomField>
    <fullName>CCS_Cooperation__c</fullName>
    <label>CCS_Cooperation</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Plzák Robert</fullName>
            </value>
            <value>
                <fullName>T-Mobile</fullName>
            </value>
            <value>
                <fullName>Petra Doffková</fullName>
            </value>
            <value>
                <fullName>Eva Pracná</fullName>
            </value>
            <value>
                <fullName>Miroslav Vaník</fullName>
            </value>
            <value>
                <fullName>Jiří Schut</fullName>
            </value>
            <value>
                <fullName>Jaroslav Peška</fullName>
            </value>
            <value>
                <fullName>David Bartůněk</fullName>
            </value>
            <value>
                <fullName>Jakub Novák</fullName>
            </value>
            <value>
                <fullName>Marek Gruber</fullName>
            </value>
            <value>
                <fullName>Klára Horká</fullName>
            </value>
            <value>
                <fullName>Miroslav Poklop</fullName>
            </value>
            <value>
                <fullName>Tomáš Zahajský</fullName>
            </value>
            <value>
                <fullName>Pavla Platková</fullName>
            </value>
            <value>
                <fullName>Irena Vraspírová</fullName>
            </value>
            <value>
                <fullName>Ctibor Pokorný</fullName>
            </value>
            <value>
                <fullName>Petra Škorpíková</fullName>
            </value>
            <value>
                <fullName>Pavel Záhora</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>