default/objects/Opportunity/fields/CCS_Fleet_Type__c.field-meta.xml
<CustomField>
    <fullName>CCS_Fleet_Type__c</fullName>
    <label>CCS_Fleet Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Cars and vans up to 3.5 t</fullName>
            </value>
            <value>
                <fullName>Vans and trucks up to 12 t</fullName>
            </value>
            <value>
                <fullName>Trucks over 12 t</fullName>
            </value>
            <value>
                <fullName>Other heavy machinery</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>