default/objects/Opportunity/fields/CCS_Hlavni_Email__c.field-meta.xml
<CustomField>
    <fullName>CCS_Hlavni_Email__c</fullName>
    <formula>Account.Email_retailer__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CCS Hlavní Email</label>
    <type>Text</type>
</CustomField>