default/objects/Opportunity/fields/CCS_Hlavni_Telefon__c.field-meta.xml
<CustomField>
    <fullName>CCS_Hlavni_Telefon__c</fullName>
    <formula>Account.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CCS Hlavní Telefon</label>
    <type>Text</type>
</CustomField>