default/objects/Opportunity/fields/CCS_Jm_na__c.field-meta.xml
<CustomField>
    <fullName>CCS_Jm_na__c</fullName>
    <label>CCS Jména</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Bronislava Štajerová</fullName>
            </value>
            <value>
                <fullName>Iveta Baštářová</fullName>
            </value>
            <value>
                <fullName>Věra Staňková</fullName>
            </value>
            <value>
                <fullName>Vladimíra Ouřadová</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>