default/objects/Opportunity/fields/CCS_Merlin_Order_Button__c.field-meta.xml
<CustomField>
    <fullName>CCS_Merlin_Order_Button__c</fullName>
    <formula>IF(
OR(
$User.UserRoleId = '00E0O0000016ESI',
$User.UserRoleId = '00E0O0000016EpM',
$User.ProfileId = '00e0O000001IV85',
$User.ProfileId = '00e0O000001IVOc',
$User.ProfileId = '00e20000001R2TS',
$User.ProfileId = '00e0O000001IVOh'),
'admin',
'login')</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CCS Merlin Order Button</label>
    <type>Text</type>
</CustomField>