default/objects/Opportunity/fields/CCS_Merlin_Stage__c.field-meta.xml
<CustomField>
    <fullName>CCS_Merlin_Stage__c</fullName>
    <description>save value from lead during convertion</description>
    <label>CCS Merlin Stage</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Closed won</fullName>
            </value>
            <value>
                <fullName>Order entered</fullName>
            </value>
            <value>
                <fullName>Order entered - Approved</fullName>
            </value>
            <value>
                <fullName>Order entered - more often DD</fullName>
            </value>
            <value>
                <fullName>Duplicate</fullName>
            </value>
            <value>
                <fullName>Waiting for power of attorney</fullName>
            </value>
            <value>
                <fullName>Waiting for Credit decision</fullName>
            </value>
            <value>
                <fullName>Waiting for MANDAT</fullName>
            </value>
            <value>
                <fullName>Waiting for card issuance</fullName>
            </value>
            <value>
                <fullName>Order entered - deposit</fullName>
            </value>
            <value>
                <fullName>Closed Lost</fullName>
            </value>
            <value>
                <fullName>Waiting for PIT/CIT</fullName>
            </value>
            <value>
                <fullName>Waiting for DD confirmation</fullName>
            </value>
            <value>
                <fullName>Waiting for deposit</fullName>
            </value>
            <value>
                <fullName>Pending Sales</fullName>
            </value>
            <value>
                <fullName>Waiting for amendment</fullName>
            </value>
            <value>
                <fullName>Waitiing for components</fullName>
            </value>
            <value>
                <fullName>Waiting for order signature</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>