default/objects/Opportunity/fields/CCS_Monitoring__c.field-meta.xml
<CustomField>
    <fullName>CCS_Monitoring__c</fullName>
    <description>Používání monitoringu konkurence.</description>
    <inlineHelpText>Používání monitoringu konkurence.</inlineHelpText>
    <label>CCS Monitoring?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Ano</fullName>
            </value>
            <value>
                <fullName>Ne</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>