default/objects/Opportunity/fields/CCS_Opportunity_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>CCS_Opportunity_Record_Type__c</fullName>
    <label>Record Type from Lead</label>
    <length>20</length>
    <type>Text</type>
</CustomField>