default/objects/Opportunity/fields/CCS_Popis_leadu__c.field-meta.xml
<CustomField>
    <fullName>CCS_Popis_leadu__c</fullName>
    <label>CCS Popis leadu</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>