default/objects/Opportunity/fields/CCS_Primary_Fueling_Method_specific__c.field-meta.xml
<CustomField>
    <fullName>CCS_Primary_Fueling_Method_specific__c</fullName>
    <label>CCS Primary Fueling Method (specific)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Jiné</fullName>
            </value>
            <value>
                <fullName>Shell</fullName>
            </value>
            <value>
                <fullName>OMV</fullName>
            </value>
            <value>
                <fullName>Benzina</fullName>
            </value>
            <value>
                <fullName>Eni (Agip)</fullName>
            </value>
            <value>
                <fullName>PapOil</fullName>
            </value>
            <value>
                <fullName>LukOil</fullName>
            </value>
            <value>
                <fullName>RobinOil</fullName>
            </value>
            <value>
                <fullName>TankONO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>