default/objects/Opportunity/fields/CCS_priobjednavka__c.field-meta.xml
<CustomField>
    <fullName>CCS_priobjednavka__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Jedná se o přiobjednávku?</description>
    <inlineHelpText>Jedná se o přiobjednávku?</inlineHelpText>
    <label>Přiobjednávka?</label>
    <type>Checkbox</type>
</CustomField>