default/objects/Opportunity/fields/CCS_Promo_offer__c.field-meta.xml
<CustomField>
    <fullName>CCS_Promo_offer__c</fullName>
    <label>CCS Promo offer</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Product_Solicited__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>OMV with monthly Fee - List Price</fullName>
            </value>
            <value>
                <fullName>OMV with monthly Fee - Totem Price</fullName>
            </value>
            <value>
                <fullName>OMV without monthly Fee - List Price</fullName>
            </value>
            <value>
                <fullName>OMV without monthly Fee - Totem Price</fullName>
            </value>
            <value>
                <fullName>OMV Individual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>