default/objects/Opportunity/fields/CCS_Reason_Lost_Other__c.field-meta.xml
<CustomField>
    <fullName>CCS_Reason_Lost_Other__c</fullName>
    <label>CCS Reason Lost Other</label>
    <type>TextArea</type>
</CustomField>