default/objects/Opportunity/fields/CCS_US_instance_owner_ID__c.field-meta.xml
<CustomField>
    <fullName>CCS_US_instance_owner_ID__c</fullName>
    <description>CCS US instance owner ID - do not interact!</description>
    <externalId>true</externalId>
    <label>CCS US instance owner ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>