default/objects/Opportunity/fields/Certification_of_incorporation_if_no_KR__c.field-meta.xml
<CustomField>
    <fullName>Certification_of_incorporation_if_no_KR__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Certification of incorporation (if no KR</label>
    <type>Checkbox</type>
</CustomField>