default/objects/Opportunity/fields/CF_checking__c.field-meta.xml
<CustomField>
    <fullName>CF_checking__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CF checking</label>
    <type>Checkbox</type>
</CustomField>