default/objects/Opportunity/fields/CF_Credit_Limit__c.field-meta.xml
<CustomField>
    <fullName>CF_Credit_Limit__c</fullName>
    <label>CF Credit Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>