default/objects/Opportunity/fields/CF_Full_Report_Date__c.field-meta.xml
<CustomField>
    <fullName>CF_Full_Report_Date__c</fullName>
    <label>CF Full Report Date</label>
    <type>Date</type>
</CustomField>