default/objects/Opportunity/fields/CF_Order_Date__c.field-meta.xml
<CustomField>
    <fullName>CF_Order_Date__c</fullName>
    <label>CF Order Date</label>
    <type>DateTime</type>
</CustomField>