default/objects/Opportunity/fields/CF_Order_Description__c.field-meta.xml
<CustomField>
    <fullName>CF_Order_Description__c</fullName>
    <label>CF Order Description</label>
    <type>TextArea</type>
</CustomField>