default/objects/Opportunity/fields/CF_Order_Party_Id__c.field-meta.xml
<CustomField>
    <fullName>CF_Order_Party_Id__c</fullName>
    <label>CF Order Party Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>