default/objects/Opportunity/fields/CF_Order_Received_Date__c.field-meta.xml
<CustomField>
    <fullName>CF_Order_Received_Date__c</fullName>
    <label>CF Order Received Date</label>
    <type>DateTime</type>
</CustomField>