default/objects/Opportunity/fields/CF_Order_Reference_Number__c.field-meta.xml
<CustomField>
    <fullName>CF_Order_Reference_Number__c</fullName>
    <label>CF Order Reference Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>