default/objects/Opportunity/fields/CF_Orders__c.field-meta.xml
<CustomField>
    <fullName>CF_Orders__c</fullName>
    <label>CF Orders</label>
    <type>TextArea</type>
</CustomField>