default/objects/Opportunity/fields/CF_Parent_Report_Generated__c.field-meta.xml
<CustomField>
    <fullName>CF_Parent_Report_Generated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CF Parent Report Generated</label>
    <type>Checkbox</type>
</CustomField>