default/objects/Opportunity/fields/CF_Search_Parameters__c.field-meta.xml
<CustomField>
    <fullName>CF_Search_Parameters__c</fullName>
    <label>CF Search Parameters</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>