default/objects/Opportunity/fields/CF_Stage__c.field-meta.xml
<CustomField>
    <fullName>CF_Stage__c</fullName>
    <label>CF Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not launched</fullName>
                <default>true</default>
                <label>Not launched</label>
            </value>
            <value>
                <fullName>Error (Report not generated)</fullName>
            </value>
            <value>
                <fullName>Launched</fullName>
            </value>
            <value>
                <fullName>Error (Report generated)</fullName>
            </value>
            <value>
                <fullName>Report generated</fullName>
            </value>
            <value>
                <fullName>Pending Credit Report - Order was sent</fullName>
            </value>
            <value>
                <fullName>Pending Credit Report - Need information</fullName>
            </value>
            <value>
                <fullName>Pending Credit Report - Additional information was sent</fullName>
            </value>
            <value>
                <fullName>Credit Report Generated</fullName>
            </value>
            <value>
                <fullName>SEPA Confirmation</fullName>
            </value>
            <value>
                <fullName>Pending deposit</fullName>
            </value>
            <value>
                <fullName>Pending Credit - Contract Check</fullName>
            </value>
            <value>
                <fullName>Auto CW</fullName>
            </value>
            <value>
                <fullName>Manual scoring</fullName>
            </value>
            <value>
                <fullName>Pending Credit Report</fullName>
            </value>
            <value>
                <fullName>Credit Report not available</fullName>
            </value>
            <value>
                <fullName>Pending Advance Payment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>