default/objects/Opportunity/fields/Change_Owner_Y_N__c.field-meta.xml
<CustomField>
    <fullName>Change_Owner_Y_N__c</fullName>
    <label>Change_Owner_Y_N</label>
    <length>10</length>
    <type>Text</type>
</CustomField>