default/objects/Opportunity/fields/Changed_the_fleet__c.field-meta.xml
<CustomField>
    <fullName>Changed_the_fleet__c</fullName>
    <label>Changed the fleet</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>