default/objects/Opportunity/fields/Closed_Lost_Source__c.field-meta.xml
<CustomField>
    <fullName>Closed_Lost_Source__c</fullName>
    <label>Closed Lost Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>E2E Closed Lost Button</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>