default/objects/Opportunity/fields/Closed_true_owner_name__c.field-meta.xml
<CustomField>
    <fullName>Closed_true_owner_name__c</fullName>
    <description>Для маркировки воронки сэйлза переведенного в другую группу продаж</description>
    <label>Closed true owner name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>