default/objects/Opportunity/fields/Closed_Won_by_CF__c.field-meta.xml
<CustomField>
    <fullName>Closed_Won_by_CF__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Closed Won by CF</label>
    <type>Checkbox</type>
</CustomField>