default/objects/Opportunity/fields/Closed_Won_WE__c.field-meta.xml
<CustomField>
    <fullName>Closed_Won_WE__c</fullName>
    <formula>IF(ISPICKVAL(StageName , "Closed Won"), TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Closed Won WE</label>
    <type>Checkbox</type>
</CustomField>