default/objects/Opportunity/fields/Closed_Won_Yes__c.field-meta.xml
<CustomField>
    <fullName>Closed_Won_Yes__c</fullName>
    <formula>IF(ISPICKVAL(StageName , "Moved to Start"), 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Closed Won Yes</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>