default/objects/Opportunity/fields/Clubsmart__c.field-meta.xml
<CustomField>
    <fullName>Clubsmart__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Clubsmart</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>