default/objects/Opportunity/fields/Commercial_Proposal_Sent__c.field-meta.xml
<CustomField>
    <fullName>Commercial_Proposal_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Commercial Proposal Sent</label>
    <type>Checkbox</type>
</CustomField>