default/objects/Opportunity/fields/Consent_received__c.field-meta.xml
<CustomField>
    <fullName>Consent_received__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Consent received</label>
    <type>Checkbox</type>
</CustomField>