default/objects/Opportunity/fields/Contact_Role_Confirmation_Call__c.field-meta.xml
<CustomField>
    <fullName>Contact_Role_Confirmation_Call__c</fullName>
    <label>Contact Role Confirmation Call</label>
    <type>Url</type>
</CustomField>