default/objects/Opportunity/fields/Contact_Salutation__c.field-meta.xml
<CustomField>
    <fullName>Contact_Salutation__c</fullName>
    <label>Contact Salutation</label>
    <length>80</length>
    <type>Text</type>
</CustomField>