default/objects/Opportunity/fields/Contract_amount__c.field-meta.xml
<CustomField>
    <fullName>Contract_amount__c</fullName>
    <label>Contract amount</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>