default/objects/Opportunity/fields/Contract_Number__c.field-meta.xml
<CustomField>
    <fullName>Contract_Number__c</fullName>
    <label>Contract Number</label>
    <length>25</length>
    <type>Text</type>
</CustomField>