default/objects/Opportunity/fields/Copy_of_national_ID_passport__c.field-meta.xml
<CustomField>
    <fullName>Copy_of_national_ID_passport__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Copy of national ID/ passport</label>
    <type>Checkbox</type>
</CustomField>