default/objects/Opportunity/fields/Count_of_Pageviews__c.field-meta.xml
<CustomField>
    <fullName>Count_of_Pageviews__c</fullName>
    <label>Count of Pageviews</label>
    <length>255</length>
    <type>Text</type>
</CustomField>