default/objects/Opportunity/fields/Counting_opportunities__c.field-meta.xml
<CustomField>
    <fullName>Counting_opportunities__c</fullName>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Counting opportunities</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>